--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -1,42 +1,24 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+/* App.css */
+body {
+  align-items: center;
+  margin: 0;
+  display: flex;
+  background-color: #1a1a1d;
+}
+.container {
+  display: flex;
+  justify-content: space-between;
+  height: 100vh;
+  /* background-color: #1a1a1d; */
+  color: #c5c6c7;
+  font-family: 'Press Start 2P', cursive; /* Adding a retro game font */
+}
+
+h1 {
   text-align: center;
+  color: #66fcf1;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+h2 {
+  color: #66fcf1;
 }
