--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -1,17 +1,6 @@
 /* App.css */
 body {
-  align-items: center;
-  margin: 0;
-  display: flex;
-  background-color: #1a1a1d;
-}
-.container {
-  display: flex;
-  justify-content: space-between;
-  height: 100vh;
-  /* background-color: #1a1a1d; */
-  color: #c5c6c7;
-  font-family: 'Press Start 2P', cursive; /* Adding a retro game font */
+  background-color: black;
 }
 
 h1 {
