--- a/vite-project/src/assets/components/GamePage.module.css
+++ b/vite-project/src/assets/components/GamePage.module.css
@@ -4,9 +4,14 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 .title{
+    display: flex;
+    justify-content: flex;
+    align-items: center;
+    text-align: center;
     font-size: 72px;
     background: -webkit-linear-gradient(#eee, #082ad1);
     -webkit-background-clip: text;
