--- a/vite-project/src/assets/components/LogIn.module.css
+++ b/vite-project/src/assets/components/LogIn.module.css
@@ -1,12 +1,11 @@
 .container {
     flex: 2;
     padding: 20px;
-    background-color: #0b0c10;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     display: flex;
     flex-direction: column;
     justify-content: center;
+    text-align: center;
     margin-right: 10px;
   }
   
@@ -18,11 +17,11 @@
   
   .input {
     padding: 20px;
-    border: 1px solid #45a29e;
+    border: 1px solid #000000;
     border-radius: 5px;
     font-size: 16px;
-    background-color: #1f2833;
-    color: #c5c6c7;
+    background-color: #b1b1b1;
+    color: #ffffff;
   }
   
   .buttonContainer {
@@ -39,12 +38,12 @@
   }
   
   .addButton {
-    background-color: #45a29e;
+    background-color: #66acfc;
     color: #0b0c10;
   }
   
   .startButton {
-    background-color: #66fcf1;
+    background-color: #66acfc;
     color: #0b0c10;
   }
   
@@ -52,3 +51,34 @@
     opacity: 0.8;
   }
   
+  .modal {
+    display: block; 
+    position: fixed; 
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.70);
+}
+
+
+.modalContent {
+    background-color: rgb(173, 167, 167); 
+    border-radius: 10px;
+    width: 50%; 
+    max-width: 400px; 
+    padding: 20px;
+    text-align: center;
+    position: absolute; /* Position absolute to center the content */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.playersList{
+  display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
