--- a/vite-project/src/assets/components/GamePage.module.css
+++ b/vite-project/src/assets/components/GamePage.module.css
@@ -8,6 +8,7 @@
 }
 
 .title{
+    margin-top: 25%;
     display: flex;
     justify-content: flex;
     align-items: center;
@@ -17,4 +18,11 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
+}
+
+.topPlayersList{
+    position:absolute;
+    right: 0px;
+    top: 0px;
+   
 }
