--- a/vite-project/src/assets/components/Player.module.css
+++ b/vite-project/src/assets/components/Player.module.css
@@ -16,3 +16,60 @@
 h1,h2 , h4{
     text-align: center;
 }
+
+.modal {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.5);
+}
+
+.modalContent {
+    background-color: rgb(190, 190, 190);
+    border-radius: 5px;
+    padding: 20px;
+    width: 80%;
+    max-width: 300px;
+    text-align: center;
+}
+
+
+
+.modalButtonLeave:hover,
+.modalButtonAgain:hover{
+    color: black;
+    cursor: pointer;
+    transform: scale(1.2);
+    border: none;
+}
+
+.modalContent{
+    color: rgb(0, 0, 0);
+    font-size:larger;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.modalButtonLeave {
+    margin: 10px;
+    padding: 10px 30px;
+    font-size: 16px;
+    cursor: pointer;
+    background-color: rgb(177, 1, 1);
+    transition: transform 0.3s ease;
+}
+
+.modalButtonAgain {
+    margin: 10px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    background-color: rgb(4, 38, 209);
+    transition: transform 0.3s ease;
+}
