--- a/vite-project/src/assets/components/TopPlayers.module.css
+++ b/vite-project/src/assets/components/TopPlayers.module.css
@@ -6,6 +6,7 @@
   padding: 20px;
   width: 300px;
   background: linear-gradient(145deg, #1e1e1e, #03051f);
+  /* background: transparent; */
   box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.5);
   color: #e8e4ee;
   font-family: 'Roboto', sans-serif;
