--- a/vite-project/src/assets/components/TopPlayers.module.css
+++ b/vite-project/src/assets/components/TopPlayers.module.css
@@ -77,7 +77,7 @@
 .closeButton {
   position: absolute;
   top: 10px;
-  right: 10px;
+  right: 15px;
   padding: 5px;
   background-color: transparent;
   border: none;
@@ -85,6 +85,7 @@
   font-size: 24px;
   transition: none;
   transition: transform 0.1s ease;
+  color: white;
 }
 
 .closeButton:hover{
